# idea-forge

./: README.md  pyproject.toml
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: BMC.md  PRD.md  REQUIREMENTS.md  ROADMAP.md  STORIES.md  TECH_SPEC.md
src/: idea_forge.py  onboarding.py
tests/: test_idea_forge.py  test_onboarding.py
