[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idea-forge"
version = "0.1.0"
description = "A tiny idea generation engine for founders."
authors = [{name = "Axentx AI"}]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
